--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="/logo.png" alt="" />
+        <img src="logo.png" alt="" />
       </div>
       <nav>
         <ul>
@@ -45,7 +45,7 @@
         <button class="cta">Learn More</button>
       </div>
       <div class="content-right">
-        <img src="/image.png" alt="" class="hero-img" />
+        <img src="image.png" alt="" class="hero-img" />
       </div>
     </main>
   </body>
